Added yarn version needed

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "yarn": "1.12.3"
+  },
   "scripts": {
     "client-install": "yarn install --prefix client",
     "start": "node server.js",
