--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client-install": "yarn install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "yarn start --prefix client",
+    "client": "cd client && yarn start",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
     "heroku-postbuild": "YARN_PRODUCTION=false && cd client && yarn install && yarn run build"
   },
