--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "heroku-postbuild": "YARN_PRODUCTION=false && cd client && yarn install && yarn run build"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.4.11"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
