--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react-countdown-now": "^2.1.0",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
