--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://mighty-peak-22764.herokuapp.com/",
   "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
