--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "nodemon server.js",
     "client": "cd client && yarn start",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
-    "heroku-postbuild": "YARN_PRODUCTION=false && cd client && yarn install && yarn run build"
+    "heroku-postbuild": "YARN_PRODUCTION=false && cd client && yarn install --network-timeout 1000000 && yarn run build"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
