--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-sound": "^1.2.0",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
